--- a/static/stat501/note_stat501.Rmd
+++ b/static/stat501/note_stat501.Rmd
@@ -64,7 +64,7 @@ This is a simulation-based approach for computing the exact posterior distributi
 
 The key idea is to introduce $N$ independent latent variables $Z_1,..Z_N\sim N(\mathbf{x}_i^T\boldsymbol{\beta},1)$ into the problem. \(Y_i=\begin{cases}1&\text{if } Z_i>0\\0&\text{if }Z_i\le0\end{cases}\)
 
-This approach is very simular to the data augmentation/Gibbs sampling framework used in censored regression models.
+This approach is very similar to the data augmentation/Gibbs sampling framework used in censored regression models.
 
 ### 2. The Gibbs Sampler
 
