--- a/static/stat501/paper/stat501.Rmd
+++ b/static/stat501/paper/stat501.Rmd
@@ -1,10 +1,10 @@
 ---
-title: Data Augmentation with Polya-Gamma Latent Variables for Logistic Models
+title: "Data Augmentation with Polya-Gamma Latent Variables for Logistic Models"
 
 blinded: 0 # to produce blinded version set to 1
 authors: 
 - name: Shen Qu
-  thanks: STAT 501 Statistical Literature and Problems; The Fariborz Maseeh Department of Mathematics + Statistics
+  thanks: "STAT 501 Statistical Literature and Problems; The Fariborz Maseeh Department of Mathematics + Statistics"
   affiliation: Portland State University
   email: qushen@pdx.edu  
 - name: Supervisor  Prof. Daniel Taylor-Rodriguez
